# devtools

./: .pre-commit-config.yaml  CMakeLists.txt
.github/: matrix_includes_buildmgr.json  matrix_includes_projmgr.json
.github/workflows/: buildmgr.yml  nightly.yml  packchk.yml  packgen.yml  projmgr.yml  toolbox.yml
buildmgr/: latest
buildmgr/2.1.0-dev0/: cmsis.js
buildmgr/2.1.0-dev1/: cmsis.js
buildmgr/2.2.0-dev0/: cmsis.js
buildmgr/2.2.0-dev1/: cmsis.js
buildmgr/2.2.0-extgen-dev0/: cmsis.js
buildmgr/2.2.0-extgen0/: cmsis.js
buildmgr/2.2.0-extgen1/: cmsis.js
buildmgr/2.2.0-extgen2/: cmsis.js
buildmgr/2.2.0-extgen3/: cmsis.js
buildmgr/2.2.1-dev0/: cmsis.js
buildmgr/2.3.0-devint0/: cmsis.js
buildmgr/2.4.0-devint0/: cmsis.js
buildmgr/2.4.0-devint1/: cmsis.js
buildmgr/2.5.0-devint0/: cmsis.js
buildmgr/2.5.0-devint1/: cmsis.js
buildmgr/2.5.0-devint2/: cmsis.js
buildmgr/2.5.0-devint3/: cmsis.js
buildmgr/2.5.0-devint4/: cmsis.js
buildmgr/2.5.0-devint5/: cmsis.js
buildmgr/2.5.0-devint6/: cmsis.js
buildmgr/2.6.0/: cmsis.js
buildmgr/main/: cmsis.js
libs/rtemodel/include/: RteGenerator.h
libs/rtemodel/src/: RteComponent.cpp  RteGenerator.cpp  RteProject.cpp
tools/buildmgr/docs/: cbuild.md
tools/packgen/include/: PackGen.h
tools/packgen/src/: PackGen.cpp
tools/projmgr/: CMakeLists.txt
tools/projmgr/docs/: README.md  SDD.md
tools/projmgr/docs/CMakeListsProposal/example/tmp/project/ARMCM3/AC6/: CMakeLists.txt  components.cmake  groups.cmake
tools/projmgr/docs/CMakeListsProposal/example/tmp/project/ARMCM3/App/: CMakeLists.txt  components.cmake  groups.cmake
tools/projmgr/docs/CMakeListsProposal/example/tmp/project/ARMCM3/GCC/: CMakeLists.txt  groups.cmake
tools/projmgr/include/: ProjMgr.h  ProjMgrCallback.h  ProjMgrExtGenerator.h  ProjMgrIpcServer.h  ProjMgrKernel.h  ProjMgrParser.h  ProjMgrRpcServer.h  ProjMgrRunDebug.h  ProjMgrWorker.h  ProjMgrYamlEmitter.h  ProjMgrYamlParser.h
tools/projmgr/schema/: clayer.schema.json  common.schema.json  cproject.schema.json  csolution.schema.json
tools/projmgr/schemas/: cbuild-gen-idx.schema.json  cbuild-gen.schema.json  cbuild.schema.json  (+10 more)
tools/projmgr/test/: CMakeLists.txt
tools/projmgr/test/data/ExternalGenerator/: global.generator.yml
tools/projmgr/test/data/ExternalGenerator/ref/MultiCore/: core0.Debug+MultiCore.cbuild-gen.yml  core1.Debug+MultiCore.cbuild-gen.yml  extgen.cbuild-gen-idx.yml
tools/projmgr/test/data/ExternalGenerator/ref/SingleCore/: extgen.cbuild-gen-idx.yml  single-core.Debug+CM0.cbuild-gen.yml  single-core.Debug+CM0.cbuild.yml
tools/projmgr/test/data/ExternalGenerator/ref/TrustZone/: extgen.cbuild-gen-idx.yml  ns.Debug+CM0.cbuild-gen.yml  s.Debug+CM0.cbuild-gen.yml
tools/projmgr/test/data/TestDefault/ref/empty/: project.Debug+TEST_TARGET.cbuild.yml  project.Release+TEST_TARGET.cbuild.yml
tools/projmgr/test/data/TestGenerator/ref/: multiple-components.Debug+CM0.cbuild.yml  test-gpdsc-layer.Debug+CM0.cbuild.yml  test-gpdsc-layer.Debug+CM0.cprj  test-gpdsc-multiple-generators.Debug+CM0.cbuild.yml  test-gpdsc.Debug+CM0.cbuild.yml
tools/projmgr/test/data/TestSolution/ContextMap/ref/: project1.Debug+RteTest_ARMCM3.cbuild.yml  project1.Release+RteTest_ARMCM3.cbuild.yml  project2.Debug+RteTest_ARMCM3.cbuild.yml  project2.Release+RteTest_ARMCM3.cbuild.yml
tools/projmgr/test/data/TestSolution/LanguageAndScope/ref/: lang-scope.Debug_AC6+RteTest_ARMCM3.cbuild.yml
tools/projmgr/test/data/TestSolution/LinkerOptions/ref/: linker.Debug_AC6+RteTest_ARMCM3.cbuild.yml  linker.Debug_GCC+RteTest_ARMCM3.cbuild.yml  linker.PriorityDefines+RteTest_ARMCM3.cbuild.yml  linker.PriorityRegions+RteTest_ARMCM3.cbuild.yml
tools/projmgr/test/data/TestSolution/StandardLibrary/ref/: library.Debug+RteTest_ARMCM3.cbuild.yml
tools/projmgr/test/data/TestSolution/ref/: TestProject3_1.Debug+TypeA.cbuild.yml  outputFiles.Debug+Target.cbuild.yml  outputFiles.Library+Target.cbuild.yml  pre-include+CM0.cbuild.yml  rtedir.Debug+CM0.cbuild.yml  rtedir.Release+CM0.cbuild.yml  test_pack_selection.cbuild-pack.yml
tools/projmgr/test/data/TestSolution/ref/cbuild/: test1.Debug+CM0.cbuild.yml  test1.Release+CM0.cbuild.yml  test2.Debug+CM0.cbuild.yml  test2.Debug+CM3.cbuild.yml
tools/projmgr/test/data/project/: test.cproject.yml
tools/projmgr/test/src/: ProjMgrTestEnv.cpp  ProjMgrTestEnv.h  ProjMgrUnitTests.cpp  ProjMgrWorkerUnitTests.cpp
(+105 files in other folders)
